--- a/Iterative Development/yolov5/dataset2.yaml
+++ b/Iterative Development/yolov5/dataset2.yaml
@@ -1,6 +1,6 @@
 # train and val data as 1) directory: path/images/, 2) file: path/images.txt, or 3) list: [path1/images/, path2/images/]
-train: ../dataset/images/
-val: ../dataset/images/
+train: ../dataset/blurred/
+val: ../dataset/blurred/
 
 # number of classes
 nc: 4
