--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,108 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
+# platform: win-64
 absl-py=0.12.0=pypi_0
 blas=1.0=mkl
-brotlipy=0.7.0=py37h27cfd23_1003
-bzip2=1.0.8=h7b6447c_0
-ca-certificates=2021.4.13=h06a4308_1
-cachetools=4.2.2=pypi_0
-cairo=1.16.0=hf32fb01_1
-certifi=2020.12.5=py37h06a4308_0
-cffi=1.14.5=py37h261ae71_0
-chardet=4.0.0=py37h06a4308_1003
-cpuonly=1.0=0
-cryptography=3.4.7=py37hd23ed53_0
-cycler=0.10.0=py37_0
-dbus=1.13.18=hb2f20db_0
-expat=2.3.0=h2531618_2
-ffmpeg=4.0=hcdf2ecd_0
-fontconfig=2.13.1=h6c09931_0
-freeglut=3.0.0=hf484d3e_5
-freetype=2.10.4=h5ab3b9f_0
-glib=2.68.2=h36276a3_0
-google-auth=1.30.0=pypi_0
+ca-certificates=2021.4.13=haa95532_1
+cachetools=4.2.1=pypi_0
+certifi=2020.12.5=py38haa95532_0
+chardet=4.0.0=pypi_0
+click=7.1.2=pypi_0
+configparser=5.0.2=pypi_0
+console_shortcut=0.1.1=4
+cudatoolkit=11.1.1=heb2d755_7
+cudnn=8.1.0.77=h3e0f4f4_0
+cycler=0.10.0=py38_0
+cython=0.29.22=pypi_0
+docker-pycreds=0.4.0=pypi_0
+freetype=2.10.4=hd328e21_0
+gitdb=4.0.7=pypi_0
+gitpython=3.1.14=pypi_0
+google-auth=1.28.0=pypi_0
 google-auth-oauthlib=0.4.4=pypi_0
-graphite2=1.3.14=h23475e2_0
-grpcio=1.38.0=pypi_0
-gst-plugins-base=1.14.0=h8213a91_2
-gstreamer=1.14.0=h28cd5cc_2
-harfbuzz=1.8.8=hffaf4a1_0
-hdf5=1.10.2=hba1933b_1
-icu=58.2=he6710b0_3
-idna=2.10=pyhd3eb1b0_0
-importlib-metadata=4.0.1=pypi_0
-intel-openmp=2021.2.0=h06a4308_610
-jasper=2.0.14=h07fcdf6_1
-jpeg=9b=h024ee3a_2
-kiwisolver=1.3.1=py37h2531618_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-libffi=3.3=he6710b0_2
-libgcc-ng=9.1.0=hdf63c60_0
-libgfortran-ng=7.3.0=hdf63c60_0
-libglu=9.0.0=hf484d3e_1
-libopencv=3.4.2=hb342d67_1
-libopus=1.3.1=h7b6447c_0
-libpng=1.6.37=hbc83047_0
-libstdcxx-ng=9.1.0=hdf63c60_0
-libtiff=4.1.0=h2733197_1
-libuuid=1.0.3=h1bed415_2
-libuv=1.40.0=h7b6447c_0
-libvpx=1.7.0=h439df22_0
-libxcb=1.14=h7b6447c_0
-libxml2=2.9.10=hb55368b_3
-lz4-c=1.9.3=h2531618_0
+grpcio=1.36.1=pypi_0
+icc_rt=2019.0.0=h0cc432a_1
+icu=58.2=ha925a31_3
+idna=2.10=pypi_0
+intel-openmp=2020.2=254
+jpeg=9b=hb83a4c4_2
+kiwisolver=1.3.1=py38hd77b12b_0
+libblas=3.8.0=20_mkl
+libcblas=3.8.0=20_mkl
+liblapack=3.8.0=20_mkl
+libpng=1.6.37=h2a8f88b_0
+libtiff=4.1.0=h56a325e_1
+libuv=1.40.0=he774522_0
+lz4-c=1.9.3=h2bbff1b_0
 markdown=3.3.4=pypi_0
-matplotlib=3.3.4=py37h06a4308_0
-matplotlib-base=3.3.4=py37h62a2d02_0
-mkl=2021.2.0=h06a4308_296
-mkl-service=2.3.0=py37h27cfd23_1
-mkl_fft=1.3.0=py37h42c9631_2
-mkl_random=1.2.1=py37ha9443f7_2
-ncurses=6.2=he6710b0_1
-ninja=1.10.2=hff7bd54_1
-numpy=1.20.2=py37h2d18471_0
-numpy-base=1.20.2=py37hfae3a4d_0
+matplotlib=3.3.4=py38haa95532_0
+matplotlib-base=3.3.4=py38h49ac443_0
+mkl=2020.2=256
+mkl-service=2.3.0=py38h196d8e1_0
+mkl_fft=1.3.0=py38h46781fe_0
+mkl_random=1.1.1=py38h47e9c7a_0
+ninja=1.10.2=h6d14046_1
+numpy=1.20.2=pypi_0
 oauthlib=3.1.0=pypi_0
-olefile=0.46=py37_0
-opencv=3.4.2=py37h6fd60c2_1
-opencv-python=4.5.2.52=pypi_0
-openssl=1.1.1k=h27cfd23_0
-pandas=1.2.4=py37h2531618_0
-pcre=8.44=he6710b0_0
-pillow=8.2.0=py37he98fc37_0
-pip=21.1.1=py37h06a4308_0
-pixman=0.40.0=h7b6447c_0
-protobuf=3.17.0=pypi_0
-py-opencv=3.4.2=py37hb342d67_1
+olefile=0.46=py_0
+opencv-python=4.5.1.48=pypi_0
+openssl=1.1.1k=h2bbff1b_0
+pandas=1.2.3=py38hf11a4ad_0
+pathtools=0.1.2=pypi_0
+pillow=8.2.0=py38h4fa10fc_0
+pip=21.0.1=py38haa95532_0
+powershell_shortcut=0.0.1=3
+promise=2.3=pypi_0
+protobuf=3.15.6=pypi_0
+psutil=5.8.0=pypi_0
 pyasn1=0.4.8=pypi_0
 pyasn1-modules=0.2.8=pypi_0
-pycparser=2.20=py_2
-pyopenssl=20.0.1=pyhd3eb1b0_1
+pycocotools=2.0.2=pypi_0
 pyparsing=2.4.7=pyhd3eb1b0_0
-pyqt=5.9.2=py37h05f1152_2
-pysocks=1.7.1=py37_1
-python=3.7.10=hdb3f193_0
+pyqt=5.9.2=py38ha925a31_4
+pyqt5=5.15.2=pypi_0
+pyqt5-qt5=5.15.2=pypi_0
+pyqt5-sip=12.8.1=pypi_0
+pyqt5-tools=5.15.2.3.0.2=pypi_0
+python=3.8.8=hdbf39b2_4
 python-dateutil=2.8.1=pyhd3eb1b0_0
-pytorch=1.7.1=py3.7_cpu_0
+python_abi=3.8=1_cp38
+pytorch=1.8.1=py3.8_cuda11.1_cudnn8_0
 pytz=2021.1=pyhd3eb1b0_0
-pyyaml=5.4.1=py37h27cfd23_1
-qt=5.9.7=h5867ecd_1
-readline=8.1=h27cfd23_0
-requests=2.25.1=pyhd3eb1b0_0
+pyyaml=5.4.1=py38h2bbff1b_1
+qt=5.9.7=vc14h73c81de_0
+qt5-applications=5.15.2.2.1=pypi_0
+qt5-tools=5.15.2.1.0.1=pypi_0
+requests=2.25.1=pypi_0
 requests-oauthlib=1.3.0=pypi_0
 rsa=4.7.2=pypi_0
-scipy=1.6.2=py37had2a1c9_1
+scipy=1.6.2=py38h14eb087_0
 seaborn=0.11.1=pyhd3eb1b0_0
-setuptools=52.0.0=py37h06a4308_0
-sip=4.19.8=py37hf484d3e_0
-six=1.15.0=py37h06a4308_0
-sqlite=3.35.4=hdfb4753_0
-tensorboard=2.5.0=pypi_0
-tensorboard-data-server=0.6.1=pypi_0
+sentry-sdk=1.0.0=pypi_0
+setuptools=52.0.0=py38haa95532_0
+shortuuid=1.0.1=pypi_0
+sip=4.19.13=py38ha925a31_0
+six=1.15.0=py38haa95532_0
+smmap=4.0.0=pypi_0
+sqlite=3.35.4=h2bbff1b_0
+subprocess32=3.5.4=pypi_0
+tensorboard=2.4.1=pypi_0
 tensorboard-plugin-wit=1.8.0=pypi_0
-tk=8.6.10=hbc83047_0
-torchaudio=0.7.2=py37
-torchvision=0.8.2=py37_cpu
-tornado=6.1=py37h27cfd23_0
+thop=0.0.31-2005241907=pypi_0
+tk=8.6.10=he774522_0
+torchaudio=0.8.1=py38
+torchvision=0.9.1=pypi_0
+tornado=6.1=py38h2bbff1b_0
 tqdm=4.59.0=pyhd3eb1b0_1
 typing_extensions=3.7.4.3=pyha847dfd_0
-urllib3=1.26.4=pyhd3eb1b0_0
-werkzeug=2.0.1=pypi_0
+urllib3=1.26.4=pypi_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wandb=0.10.24=pypi_0
+werkzeug=1.0.1=pypi_0
 wheel=0.36.2=pyhd3eb1b0_0
-xz=5.2.5=h7b6447c_0
-yaml=0.2.5=h7b6447c_0
-zipp=3.4.1=pypi_0
-zlib=1.2.11=h7b6447c_3
-zstd=1.4.9=haebb681_0
+wincertstore=0.2=py38_0
+xz=5.2.5=h62dcd97_0
+yaml=0.2.5=he774522_0
+zlib=1.2.11=h62dcd97_4
+zstd=1.4.9=h19a0ad4_0
